--- a/app/pom.xml
+++ b/app/pom.xml
@@ -36,6 +36,11 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    
+    <properties>
+  <sonar.organization>koti-az400</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
 
     <build>
         <plugins>
