--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,6 @@ steps:
     azureSubscription: 'Koti_Paid (b321893b-78f2-4e98-b106-8c4a140e2f83)'
     appType: 'webAppLinux'
     WebAppName: 'testapp-koti'
-    packageForLinux: '$(System.ArtifactsDirectory)/drop/**/target/*.?(war|jar)'
+    packageForLinux: '$(System.ArtifactsDirectory)/drop/app/target/*.jar)'
 
 
