--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -30,7 +30,7 @@ jobs:
       run: mvn -B package --file app/pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml -f app/pom.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
     - name: Azure WebApp
