--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -40,8 +40,7 @@ jobs:
     - name: Build and deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: <your-app-name>
-        slot-name: <your-slot-name> # optional
+        app-name: test-webapp2023
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
 
         
